[package]
name = "io_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features =["ws"]} 
rppal = "0.17.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "full"] }
tokio-tungstenite = "0.23"
headers = "0.4"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
